# parallel_needleman_wunsch

./: CMakeLists.txt  Doxyfile  README.md  benchmark.sh  test.sh  visualization.sh
bashScripts/: blockLength_vs_cycles.sh  euler_setup.sh  generateSeq.sh  procs_occupation.sh  procs_vs_cycles.sh  seqlength_vs_cycles.sh  shared_blocklength.sh  shared_seqlen.sh  testPar.sh  testSeq.sh  threads_vs_cycles.sh
benchmarking/: plot_blockLength_vs_cycles.py  plot_procs_occupation.py  plot_procs_vs_cycles.py  plot_seqlength_vs_cycles.py
benchmarking/runtimes_threads_vs_cycles/parallelOpenMpOpt_14/: runtimes_threads_vs_cycles_parallelOpenMpOpt_14_90000.txt
benchmarking/runtimes_threads_vs_cycles/parallelOpenMp_13/: runtimes_threads_vs_cycles_parallelOpenMp_13_90000.txt
data/: rawCovid.txt  test_strings.txt
data/sequences/: seq10.txt  seq10000.txt  seq100000.txt  seq110000.txt  seq120000.txt  seq130000.txt  seq140000.txt  seq150000.txt  seq20000.txt  seq30000.txt  seq40000.txt  seq50000.txt  seq60000.txt  seq70000.txt  seq80000.txt  seq90000.txt
docs/html/: index.html
src/helperScripts/: mutatedStrings.py
src/parallelNW/parallelBaselineOpt_11/: CMakeLists.txt  main.cpp
src/parallelNW/parallelBaselineOpt_11/include/: nwHelper.hpp  nwMpi.hpp
src/parallelNW/parallelBaselineOpt_11/src/: nwHelper.cpp  nwMpi.cpp  userFunctions.cpp
src/parallelNW/parallelBaseline_10/: CMakeLists.txt  main.cpp
src/parallelNW/parallelBaseline_10/include/: nwHelper.hpp  nwMpi.hpp
src/parallelNW/parallelBaseline_10/src/: nwHelper.cpp  nwMpi.cpp
src/parallelNW/parallelOpenMpOpt_14/: CMakeLists.txt  main.cpp
src/parallelNW/parallelOpenMpOpt_14/include/: nwHelper.hpp
src/parallelNW/parallelOpenMpOpt_14/src/: nwHelper.cpp
src/parallelNW/parallelOpenMp_13/: CMakeLists.txt  main.cpp
src/parallelNW/parallelOpenMp_13/include/: nwHelper.hpp  userFunctions.hpp
src/parallelNW/parallelOpenMp_13/src/: nwHelper.cpp
src/parallelNW/parallelShared_12/: CMakeLists.txt  main.cpp
src/parallelNW/parallelShared_12/include/: nwHelper.hpp  nwMpi.hpp  nwSolver.hpp
src/parallelNW/parallelShared_12/src/: nwHelper.cpp  nwMpi.cpp  nwSolver.cpp
src/sequentialNW/sequentialBaseline_00/: CMakeLists.txt  main.cpp
src/sequentialNW/sequentialBaseline_00/include/: nwHelper.hpp  nwSolver.hpp  userFunctions.hpp
src/sequentialNW/sequentialBaseline_00/src/: nwHelper.cpp  nwSolver.cpp  userFunctions.cpp
src/sequentialNW/sequentialDiagOptNested_05/: CMakeLists.txt
src/sequentialNW/sequentialDiagOptNested_05/src/: nwSolver.cpp
src/sequentialNW/sequentialDiagSimdPragma_06/: CMakeLists.txt
src/sequentialNW/sequentialDiagSimdPragma_06/include/: nwHelper.hpp  nwSolver.hpp
src/sequentialNW/sequentialDiagSimdPragma_06/src/: nwSolver.cpp
src/sequentialNW/sequentialDiagSimd_04/: CMakeLists.txt  main.cpp
src/sequentialNW/sequentialDiagSimd_04/include/: nwHelper.hpp  nwSimd.hpp  nwSolver.hpp
src/sequentialNW/sequentialDiagSimd_04/src/: nwHelper.cpp  nwSimd.cpp  nwSolver.cpp
src/timer/: timer.h
